<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fishViewModel"
            type="com.example.pecapp.screens.newcatch.fish.CatchFishViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.newcatch.fish.FragmentNewCatchFish">

        <EditText
            android:id="@+id/new_catch_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/hint_catch_weight"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@={fishViewModel.weight}"
            app:layout_constraintBottom_toTopOf="@+id/new_catch_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_catch_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/hint_catch_length"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@={fishViewModel.length}"
            app:layout_constraintBottom_toTopOf="@+id/button_fish_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_catch_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/hint_catch_type"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@={fishViewModel.type}"
            app:layout_constraintBottom_toTopOf="@+id/new_catch_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/new_catch_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_broken_image_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/new_catch_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_fish_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

